模型/Q1/v1/数学模型.md
# Q1 数学模型

owner_name: 罗懿
owner_code: L
owner_role: 建模手
version: v1
status: draft
based_on: 模型/Q1/v1/建模思路.md；题目信息/A题/附件3.xlsx/Sheet1!A2:H2；题目信息/A题/附件4.xlsx/Sheet1!A1:B14

## 符号与参数

| 符号 | 含义 | 单位 | Q1 取值/来源 |
|---|---|---:|---|
| `m_f` | 浮子质量 | kg | 4866，附件 4 |
| `m_o` | 振子质量 | kg | 2433，附件 4 |
| `m_a` | 浮子垂荡附加质量 | kg | 1335.535，附件 3 |
| `b_h` | 浮子垂荡兴波阻尼系数 | N·s/m | 656.3616，附件 3 |
| `F` | 波浪激励力振幅 | N | 6250，附件 3 |
| `ω` | 入射波圆频率 | s⁻¹ | 1.4005，附件 3 |
| `R_f` | 浮子水线面半径 | m | 1，附件 4 |
| `ρ` | 海水密度 | kg/m³ | 1025，附件 4 |
| `g` | 重力加速度 | m/s² | 9.8，附件 4 |
| `k` | 直线弹簧刚度 | N/m | 80000，附件 4 |
| `K_h` | 垂荡静水恢复刚度 | N/m | 由水线面计算 |
| `c` | 常量直线阻尼系数 | N·s/m | 情形一取 10000 |
| `c_0,p` | 幂律阻尼比例系数、幂指数 | 依 `p` 而定、— | 情形二取 10000、0.5 |

浮子在静平衡附近的垂荡静水恢复刚度由水线面面积确定：

\[
K_h=\rho gA_w=\rho g\pi R_f^2=31557.2982\ \mathrm{N/m}.
\]

其中 `A_w` 为圆柱段水线面面积。由总质量对应的排水体积可知静水面位于圆柱段，因此使用 `πR_f²`。

## 变量与状态

| 符号 | 含义 | 单位 |
|---|---|---:|
| `z_f(t)` | 浮子相对静平衡位置的垂荡位移，向上为正 | m |
| `z_o(t)` | 振子相对静平衡位置的垂荡位移，向上为正 | m |
| `ξ(t)=z_o(t)-z_f(t)` | 振子相对浮子的位移 | m |
| `v_r(t)=ξ̇(t)` | 振子相对浮子的速度 | m/s |

连续状态向量定义为

\[
\boldsymbol{x}(t)=\bigl(z_f,\dot z_f,z_o,\dot z_o\bigr)^{\mathsf T}.
\]

该状态包含题目要求的两类位移和速度。

## 模型定义

PTO 作用在相对运动方向上的阻尼力标量定义为

\[
D(v_r)=
\begin{cases}
c\,v_r,&\text{情形一},\\
c_0|v_r|^p v_r,&\text{情形二}.
\end{cases}
\tag{Q1-1}
\]

`D` 的正方向与 `v_r` 相同；阻尼器对振子的实际作用力为 `-D`，对浮子的作用力为 `+D`。因此耗散率为 `D(v_r)v_r≥0`。

弹簧对振子的恢复力为

\[
F_{k,o}=-k\xi.
\]

对浮子的弹簧力为 `kξ`，二者满足作用力与反作用力关系。

浮子的垂荡控制方程为

\[
(m_f+m_a)\ddot z_f+b_h\dot z_f+K_hz_f-k\xi-D(\dot\xi)
=F\cos(\omega t).
\tag{Q1-2}
\]

方程左侧依次对应等效惯性、兴波阻尼、静水恢复以及移到左侧的弹簧/PTO 相互作用；右侧是波浪激励力。

振子的垂荡控制方程为

\[
m_o\ddot z_o+k\xi+D(\dot\xi)=0.
\tag{Q1-3}
\]

振子不直接承受题面给出的波浪激励，其运动由与浮子的相对弹簧力和阻尼力决定。

在常量阻尼情形下，令 `q=(z_f,z_o)^T`，控制方程写成

\[
\boldsymbol M\ddot{\boldsymbol q}
+\boldsymbol C\dot{\boldsymbol q}
+\boldsymbol K\boldsymbol q
=\boldsymbol f(t).
\tag{Q1-4}
\]

其中各矩阵为

\[
\boldsymbol M=
\begin{bmatrix}m_f+m_a&0\\0&m_o\end{bmatrix},\quad
\boldsymbol C=
\begin{bmatrix}b_h+c&-c\\-c&c\end{bmatrix},\quad
\boldsymbol K=
\begin{bmatrix}K_h+k&-k\\-k&k\end{bmatrix},\quad
\boldsymbol f(t)=
\begin{bmatrix}F\cos(\omega t)\\0\end{bmatrix}.
\]

矩阵形式仅适用于 `D(v_r)=cv_r`；幂律情形使用式（Q1-2）和式（Q1-3）。

## 目标函数

Q1 是给定参数下的响应计算，不设置优化目标。待求对象是式（Q1-2）和式（Q1-3）在指定初值下的唯一时间响应。

## 约束与可行域

模型状态必须满足

\[
z_f,z_o,\dot z_f,\dot z_o\in\mathbb R,\qquad
c\ge0,\quad c_0\ge0,\quad p\ge0.
\]

非负阻尼参数保证 PTO 为耗散元件；模型适用范围还要求垂荡幅度足够小，使附件 3 的线性水动力参数保持有效。

## 边界与初始条件

静水平衡初值为

\[
z_f(0)=z_o(0)=0,\qquad
\dot z_f(0)=\dot z_o(0)=0.
\tag{Q1-5}
\]

计算终点由 40 个波浪周期确定：

\[
T=\frac{2\pi}{\omega},\qquad t_{\max}=40T.
\]

连续模型在 `t_n=0.2n s` 处采样，并保留所有满足 `0≤t_n≤t_max` 的时刻。

## 跨小问接口

Q2 直接复用式（Q1-2）和式（Q1-3）的垂荡动力学骨架，只替换波浪频率、水动力参数及 PTO 阻尼决策变量。符号 `z_f,z_o,ξ` 与单位保持不变。

## 模型输出

两种阻尼情形分别输出

\[
\mathcal Y_1=
\left\{t_n,z_f(t_n),\dot z_f(t_n),z_o(t_n),\dot z_o(t_n)\right\}.
\tag{Q1-6}
\]

完整序列分别对应 `result1-1.xlsx` 和 `result1-2.xlsx`；论文还需抽取 `t=10,20,40,60,100 s` 的四个状态量。
