模型/Q1/v2/数学模型.md
# Q1 数学模型

owner_name: 罗懿
owner_code: L
owner_role: 建模手
version: v2
status: draft
based_on: 模型/Q1/v1/数学模型.md；模型/Q1/v2/建模思路.md；题目信息/A题/附件3.xlsx/Sheet1!A2:H2；题目信息/A题/附件4.xlsx/Sheet1!A1:B14

## 符号与参数

| 符号 | 含义 | 单位 | Q1 取值/来源 |
|---|---|---:|---|
| `m_f` | 浮子质量 | kg | 4866，附件 4 |
| `m_o` | 振子质量 | kg | 2433，附件 4 |
| `m_a` | 浮子垂荡附加质量 | kg | 1335.535，附件 3 |
| `b_h` | 浮子垂荡兴波阻尼系数 | N·s/m | 656.3616，附件 3 |
| `F` | 波浪激励力振幅 | N | 6250，附件 3 |
| `ω` | 入射波圆频率 | s⁻¹ | 1.4005，附件 3 |
| `R_f` | 浮子底半径 | m | 1，附件 4 |
| `H_1` | 浮子圆柱段高度 | m | 3，附件 4 |
| `H_2` | 浮子圆锥段高度 | m | 0.8，附件 4 |
| `ρ` | 海水密度 | kg/m³ | 1025，附件 4 |
| `g` | 重力加速度 | m/s² | 9.8，附件 4 |
| `k` | 直线弹簧刚度 | N/m | 80000，附件 4 |
| `K_h` | 垂荡静水恢复刚度 | N/m | 由水线面计算 |
| `c` | 常量直线阻尼系数 | N·s/m | 情形一取 10000 |
| `c_0,p` | 幂律阻尼比例系数、幂指数 | 依 `p` 而定、— | 情形二取 10000、0.5 |

静平衡排水体积由系统总质量确定：

\[
V_d=\frac{m_f+m_o}{\rho}\approx7.1210\ \mathrm{m^3}.
\]

圆锥段完全浸没时的体积为

\[
V_c=\tfrac{1}{3}\pi R_f^2H_2\approx0.8378\ \mathrm{m^3}.
\]

圆柱段的静吃水深度为

\[
h_s=\frac{V_d-V_c}{\pi R_f^2}\approx2.0000\ \mathrm{m}.
\]

由 `0<h_s<H_1` 可知静水面位于圆柱段，水线面为半径 `R_f` 的圆。

浮子在静平衡附近的垂荡静水恢复刚度为

\[
K_h=\rho gA_w=\rho g\pi R_f^2=31557.2982\ \mathrm{N/m}.
\]

其中 `A_w` 为水线面面积。

## 变量与状态

| 符号 | 含义 | 单位 |
|---|---|---:|
| `z_f(t)` | 浮子相对静平衡位置的垂荡位移，向上为正 | m |
| `z_o(t)` | 振子相对静平衡位置的垂荡位移，向上为正 | m |
| `ξ(t)=z_o(t)-z_f(t)` | 振子相对浮子的位移 | m |
| `v_r(t)=ξ̇(t)` | 振子相对浮子的速度 | m/s |

静平衡参考由浮子的浮重平衡和振子的弹簧支承平衡共同确定：弹簧静压缩量满足 `kδ_0=m_o g`，即 `δ_0≈0.2980 m`。重力、静浮力与弹簧预压缩的常量部分在该平衡下相互抵消，以下方程均只含增量变量。

连续状态向量定义为

\[
\boldsymbol{x}(t)=\bigl(z_f,\dot z_f,z_o,\dot z_o\bigr)^{\mathsf T}.
\]

该状态包含题目要求的两类位移和速度。

## 模型定义

PTO 作用在相对运动方向上的阻尼力标量定义为

\[
D(v_r)=
\begin{cases}
c\,v_r,&\text{情形一},\\
c_0|v_r|^p v_r,&\text{情形二}.
\end{cases}
\tag{Q1-1}
\]

`D` 的正方向与 `v_r` 相同；阻尼器对振子的实际作用力为 `-D`，对浮子的作用力为 `+D`，耗散率满足 `D(v_r)v_r≥0`。

弹簧对振子的恢复力为

\[
F_{k,o}=-k\xi.
\]

对浮子的弹簧力为 `kξ`，二者满足作用力与反作用力关系。

波浪激励、附加惯性、兴波阻尼和静水恢复只作用于浮子；振子仅通过弹簧和阻尼器与浮子交换动量。浮子的垂荡控制方程为

\[
(m_f+m_a)\ddot z_f+b_h\dot z_f+K_hz_f-k\xi-D(\dot\xi)
=F\cos(\omega t).
\tag{Q1-2}
\]

方程左侧依次对应等效惯性、兴波阻尼、静水恢复以及移到左侧的弹簧/PTO 相互作用；右侧是波浪激励力。

振子的垂荡控制方程为

\[
m_o\ddot z_o+k\xi+D(\dot\xi)=0.
\tag{Q1-3}
\]

振子的运动由与浮子的相对弹簧力和阻尼力决定。

在常量阻尼情形下，令 `q=(z_f,z_o)^T`，控制方程写成

\[
\boldsymbol M\ddot{\boldsymbol q}
+\boldsymbol C\dot{\boldsymbol q}
+\boldsymbol K\boldsymbol q
=\boldsymbol f(t).
\tag{Q1-4}
\]

其中各矩阵为

\[
\boldsymbol M=
\begin{bmatrix}m_f+m_a&0\\0&m_o\end{bmatrix},\quad
\boldsymbol C=
\begin{bmatrix}b_h+c&-c\\-c&c\end{bmatrix},\quad
\boldsymbol K=
\begin{bmatrix}K_h+k&-k\\-k&k\end{bmatrix},\quad
\boldsymbol f(t)=
\begin{bmatrix}F\cos(\omega t)\\0\end{bmatrix}.
\]

矩阵形式适用于 `D(v_r)=cv_r`；幂律情形使用式（Q1-2）和式（Q1-3）。

两种阻尼情形统一的状态空间演化方程为

\[
\dot{\boldsymbol x}=
\begin{pmatrix}
x_2\\[2pt]
\dfrac{F\cos(\omega t)-b_hx_2-K_hx_1+k\xi+D(\dot\xi)}{m_f+m_a}\\[8pt]
x_4\\[2pt]
-\dfrac{k\xi+D(\dot\xi)}{m_o}
\end{pmatrix},
\qquad
\xi=x_3-x_1,\ \ \dot\xi=x_4-x_2.
\tag{Q1-5}
\]

其中 `x_1,x_2,x_3,x_4` 为状态向量 `x` 的分量。对 `p∈(0,1]`，映射 `v↦|v|^p v` 连续可微，式（Q1-5）右端对状态局部 Lipschitz 且系统耗散，初值问题在 `[0,t_max]` 上存在唯一解。

常量阻尼情形的简谐稳态响应为

\[
z_f(t)=\operatorname{Re}\!\bigl(\hat z_f e^{\mathrm i\omega t}\bigr),\quad
z_o(t)=\operatorname{Re}\!\bigl(\hat z_o e^{\mathrm i\omega t}\bigr),
\]

其中复振幅由频响方程给出：

\[
\hat z_f=\frac{F\bigl(k+\mathrm i\omega c-\omega^2m_o\bigr)}{\Delta(\omega)},\qquad
\hat z_o=\frac{F\bigl(k+\mathrm i\omega c\bigr)}{\Delta(\omega)},
\tag{Q1-6}
\]

\[
\Delta(\omega)=
\bigl[K_h+k-\omega^2(m_f+m_a)+\mathrm i\omega(b_h+c)\bigr]
\bigl[k-\omega^2m_o+\mathrm i\omega c\bigr]
-\bigl(k+\mathrm i\omega c\bigr)^2.
\]

`Δ(ω)` 为系统频响行列式。由于 `b_h>0`、`c>0`，齐次解随时间衰减，长时间数值解应收敛到式（Q1-6）的稳态；该解析解是数值结果的独立校验锚点。

系统机械能定义为

\[
E(t)=\tfrac12(m_f+m_a)\dot z_f^{\,2}
+\tfrac12 m_o\dot z_o^{\,2}
+\tfrac12 K_hz_f^{\,2}
+\tfrac12 k\xi^{\,2}.
\]

沿式（Q1-2）和式（Q1-3）的解，能量平衡恒等式为

\[
\dot E=F\cos(\omega t)\,\dot z_f-b_h\dot z_f^{\,2}-D(\dot\xi)\,\dot\xi.
\tag{Q1-7}
\]

右端三项分别为波浪输入功率、兴波耗散功率和 PTO 耗散功率；后两项恒非负，该恒等式是数值解的能量校验依据。

## 目标函数

Q1 是给定参数下的机理响应计算。待求量为

\[
\text{求}\ \boldsymbol x(t),\ t\in[0,t_{\max}],
\]

满足式（Q1-2）、式（Q1-3）与初始条件（Q1-8），并在指定时刻采样输出。

## 约束与可行域

模型状态必须满足

\[
z_f,z_o,\dot z_f,\dot z_o\in\mathbb R,\qquad
c\ge0,\quad c_0\ge0,\quad p\ge0.
\]

非负阻尼参数保证 PTO 为耗散元件；模型适用范围还要求垂荡幅度足够小，使附件 3 的线性水动力参数保持有效。

## 边界与初始条件

静水平衡初值为

\[
z_f(0)=z_o(0)=0,\qquad
\dot z_f(0)=\dot z_o(0)=0.
\tag{Q1-8}
\]

计算终点由 40 个波浪周期确定：

\[
T=\frac{2\pi}{\omega},\qquad t_{\max}=40T.
\]

代入 `ω=1.4005 s⁻¹` 得 `T≈4.4864 s`，`t_max≈179.4555 s`。连续模型在 `t_n=0.2n s` 处采样，保留所有满足 `0≤t_n≤t_max` 的时刻；论文抽取时刻 `t∈{10,20,40,60,100} s` 均落在该网格内。

## 跨小问接口

PTO 的瞬时输出功率定义为

\[
P(t)=D(\dot\xi)\,\dot\xi.
\tag{Q1-9}
\]

Q2 的平均输出功率由 `P(t)` 的时间平均给出，并以阻尼参数为决策变量。Q2 直接复用式（Q1-2）、式（Q1-3）和式（Q1-6）的垂荡动力学骨架，只替换波浪频率、水动力参数及 PTO 阻尼决策变量；符号 `z_f,z_o,ξ` 与单位保持不变。

## 模型输出

两种阻尼情形分别输出

\[
\mathcal Y_1=
\left\{t_n,z_f(t_n),\dot z_f(t_n),z_o(t_n),\dot z_o(t_n)\right\}.
\tag{Q1-10}
\]

完整序列分别对应 `result1-1.xlsx` 和 `result1-2.xlsx`；论文还需抽取 `t=10,20,40,60,100 s` 的四个状态量。
